<package>
  <name>blort_bciinterface</name>
  <description>
    Allow to use BLORT objects as SSVEP stimuli in bci-interface
  </description>
  <author email="pierre.gergondet+github@gmail.com">Pierre Gergondet</author>
  <maintainer email="pierre.gergondet+github@gmail.com">Pierre Gergondet</maintainer>
  <license>BSD</license>
  <version>1.0.0</version>
  <url>http://ros.org/wiki/blort_bciinterface</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>blort_ros</build_depend>
  <build_depend>bciinterface_rosbackground</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>blort_ros</run_depend>
</package>


